--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/akveo/ngx-admin.git"
+    "url": "git+https://github.com/sasho33/cypress-test-project"
   },
   "bugs": {
-    "url": "https://github.com/akveo/ngx-admin/issues"
+    "url": "https://github.com/sasho33/cypress-test-project/issues"
   },
   "scripts": {
     "ng": "ng",
@@ -45,6 +45,7 @@
     "@nebular/security": "4.1.2",
     "@nebular/theme": "4.1.2",
     "@swimlane/ngx-charts": "^13.0.2",
+    "angular": "^1.8.3",
     "angular-tree-component": "8.5.6",
     "angular2-chartjs": "0.4.1",
     "angular2-toaster": "^7.0.0",
@@ -53,23 +54,27 @@
     "ckeditor": "4.7.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.1",
+    "cypress": "^12.5.1",
     "echarts": "^4.0.2",
     "eva-icons": "^1.1.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
     "nebular-icons": "1.1.0",
+    "ng": "^0.0.0",
     "ng2-ckeditor": "^1.2.2",
     "ng2-completer": "2.0.8",
     "ng2-smart-table": "1.3.5",
     "ngx-echarts": "^4.0.1",
-    "sass": "^1.53.0",
     "normalize.css": "6.0.0",
+    "npm-cli": "^0.1.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
     "rxjs": "6.5.2",
     "rxjs-compat": "6.3.0",
+    "sass": "^1.53.0",
     "socicon": "3.0.5",
+    "source-map": "^0.7.4",
     "tinymce": "4.5.7",
     "tslib": "^1.9.0",
     "typeface-exo": "0.0.22",
